--- a/TODO.txt
+++ b/TODO.txt
@@ -5,8 +5,16 @@ See if the underscore function can be turned into a lambda statement
 When submitting an inventory item clear the entry boxes
 
 Implemented functionality for adding item types and sizes to comboboxes
-Need to figure out how to display specific item types and sizes
-based off what item name is selected on the add inventory window
+Need to figure out how to display specific values in the type and size comboboxes based off of item selected
+Look into attribute values passed by the combobox selection event; may be able to have Update_Entry_Boxes func update both
+add and remove entry boxes. If not will just need a separate function 
+
+Adding an inventory item:
+1. Select an item
+2. Based upon that item selected present the available types and sizes in comboboxes
+3. Type in Quantity
+4. Submit
+5. After submission clear boxes
 
 
 
@@ -17,17 +25,30 @@ based off what item name is selected on the add inventory window
 import sqlite3 as sql
 con = sql.connect('CoatsDB')
 cur = con.cursor()
-cur.execute('Select * from Boots;')
+cur.execute('Select * from Gloves;')
 cur.fetchall()
 
+import sqlite3 as sql
+con = sql.connect('CoatsDB')
+cur = con.cursor()
+cur.execute("insert into Hat (Hat_Type) values ('Female');")
 
-Revise Add_Item function. Not properly sending type and size.
-Sending two variables no matter what, need to send one
-Use Boot_Sizes values to populate comboboxes on startup
 
-Adding an inventory item:
-1. Select an item
-2. Based upon that item selected present the available types and sizes in comboboxes
-3. Type in Quantity
-4. Submit
-5. After submission clear boxes
+
+insert into Hat
+(hat_type)
+values
+('Female'),
+('Male');
+
+
+
+Socks
+Type: Men, Boy, Woman, Girl, Other
+
+Boots:
+Type: Mens
+Size: 12
+
+Hat
+Type: Male, Female, Baby
